<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="?attr/fonrengi">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/choose_theme"
        android:textColor="?attr/textcolor"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/theme_toggle_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:selectionRequired="true"
        app:singleSelection="true"
        app:checkedButton="@+id/theme_light"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme_light"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:minWidth="0dp"
            android:text="@string/light_theme"
            app:icon="@drawable/ic_brightness_7_black_24dp"
            app:iconPadding="4dp"
            android:onClick="theme__light"
            android:textColor="?attr/textcolor"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/theme_dark"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="12dp"
            android:minWidth="0dp"
            android:text="@string/dark_theme"
            app:icon="@drawable/ic_brightness_4_black_24dp"
            app:iconPadding="4dp"
            android:onClick="theme__dark"
            android:textColor="?attr/textcolor"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:backgroundTint="?attr/textcolor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_color"
        android:textColor="?attr/textcolor"
        android:textAlignment="center"/>
    <RadioGroup
        android:id="@+id/radio_first_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"

            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="8dp"

            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawablePadding="8dp"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second_color"
        android:textColor="?attr/textcolor"
        android:textAlignment="center"/>
    <RadioGroup
        android:id="@+id/radio_second_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"

            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:drawablePadding="8dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawablePadding="8dp"/>


    </RadioGroup>
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:scrollbars="none">
        <RadioGroup
            android:id="@+id/secondary_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/white"
        android:backgroundTint="?attr/textcolor"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shape_corner"
        android:textColor="?attr/textcolor"
        android:textAlignment="center"
        />

    <RadioGroup
        android:id="@+id/shape_families"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_rounded_corners_24px"
            android:text="@string/shape_rounded"
            android:textColor="?attr/textcolor"
            />

        <RadioButton
            android:id="@+id/cut_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/ic_cut_corners_24px"
            android:text="@string/shape_cut"
            android:textColor="?attr/textcolor"/>
    </RadioGroup>


    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/apply"
        android:background="?attr/colorPrimary"/>

    <Button
        android:id="@+id/clear_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/clear"
        android:textColor="?attr/textcolor"
        android:background="?attr/textcolor"
        />

</LinearLayout>
